test/spec_vectors/conversions/fail/module_13.wat
(module (func (result i64) (i64.reinterpret_f64 (i32.const 0))))